5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4413/executions/1635_2704.log
== SUBMITION (2019-04-10 13:11:44) 
-- CODE:
nota = float(input("nota: "))
bonificacao = input("bonificacao: ")
if(bonificacao==s):
	mensagem = (nota+nota*10/100)
else:
	mensagem = (nota)
print(mensagem)
-- EXECUTION TIME:
0.136714
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2704/main.py", line 3, in <module>
    if(bonificacao==s):
NameError: name 's' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:11:46) 
-- CODE:
nota = float(input("nota: "))
bonificacao = input("bonificacao: ")
if(bonificacao==s):
	mensagem = (nota+nota*10/100)
else:
	mensagem = (nota)
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(bonificacao==s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:12:15) 
-- CODE:
nota = float(input("nota: "))
bonificacao = input("bonificacao: ")
if(bonificacao="s"):
	mensagem = (nota+nota*10/100)
else:
	mensagem = (nota)
print(mensagem)
-- EXECUTION TIME:
0.135148
-- ERROR:
  File "/home/codebench/codes/1635/2704/main.py", line 3
    if(bonificacao="s"):
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:12:17) 
-- CODE:
nota = float(input("nota: "))
bonificacao = input("bonificacao: ")
if(bonificacao="s"):
	mensagem = (nota+nota*10/100)
else:
	mensagem = (nota)
print(mensagem)
-- ERROR:
File "XXXX", line 3
    if(bonificacao="s"):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:12:33) 
-- CODE:
nota = float(input("nota: "))
bonificacao = input("bonificacao: ")
if(bonificacao=s):
	mensagem = (nota+nota*10/100)
else:
	mensagem = (nota)
print(mensagem)
-- ERROR:
File "XXXX", line 3
    if(bonificacao=s):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:12:36) 
-- CODE:
nota = float(input("nota: "))
bonificacao = input("bonificacao: ")
if(bonificacao=s):
	mensagem = (nota+nota*10/100)
else:
	mensagem = (nota)
print(mensagem)
-- EXECUTION TIME:
0.23234
-- ERROR:
  File "/home/codebench/codes/1635/2704/main.py", line 3
    if(bonificacao=s):
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:12:38) 
-- CODE:
nota = float(input("nota: "))
bonificacao = input("bonificacao: ")
if(bonificacao=s):
	mensagem = (nota+nota*10/100)
else:
	mensagem = (nota)
print(mensagem)
-- ERROR:
File "XXXX", line 3
    if(bonificacao=s):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:13:04) 
-- CODE:
nota = float(input("nota: "))
bonificacao = input("bonificacao: ")
if(bonificacao=S):
	mensagem = (nota+nota*10/100)
else:
	mensagem = (nota)
print(mensagem)
-- EXECUTION TIME:
0.194127
-- ERROR:
  File "/home/codebench/codes/1635/2704/main.py", line 3
    if(bonificacao=S):
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:13:32) 
-- CODE:
nota = float(input("nota: "))
bonificacao = input("bonificacao: ")
if(bonificacao=S):
	mensagem = (nota+nota*10/100)
else:
	mensagem = (nota)
print(mensagem)
-- ERROR:
File "XXXX", line 3
    if(bonificacao=S):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:13:42) 
-- CODE:
nota = float(input("nota: "))
bonificacao = input("bonificacao: ")
if(bonificacao==S):
	mensagem = (nota+nota*10/100)
else:
	mensagem = (nota)
print(mensagem)
-- EXECUTION TIME:
0.139786
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2704/main.py", line 3, in <module>
    if(bonificacao==S):
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:13:43) 
-- CODE:
nota = float(input("nota: "))
bonificacao = input("bonificacao: ")
if(bonificacao==S):
	mensagem = (nota+nota*10/100)
else:
	mensagem = (nota)
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(bonificacao==S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:14:16) 
-- CODE:
nota = float(input("nota: "))
bonificacao = input("bonificacao: ")
if(bonificacao==8):
	mensagem = (nota+nota*10/100)
else:
	mensagem = (nota)
print(mensagem)
-- EXECUTION TIME:
0.141846
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 13:14:18) 
-- CODE:
nota = float(input("nota: "))
bonificacao = input("bonificacao: ")
if(bonificacao==8):
	mensagem = (nota+nota*10/100)
else:
	mensagem = (nota)
print(mensagem)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 13:14:55) 
-- CODE:
nota = float(input("nota: "))
bonificacao = input("bonificacao: ")
if(bonificacao=="S"):
	mensagem = (nota+nota*10/100)
else:
	mensagem = (nota)
print(mensagem)
-- EXECUTION TIME:
0.147047
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
